--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhot:8080",
+  "proxy": "http://localhost:8080",
   "name": "food-company",
   "version": "0.1.0",
   "private": true,
